syntax = "proto2";

package channel_server;

enum message_type {
	FRIENDS_REQ      = 0;
	FRIENDS_ANS      = 1;
	PLAY_RANK_REQ    = 2;
	PLAY_RANK_ANS    = 3;
	PLAY_FRIENDS_REL = 4;
	MATCH_COMPLETE   = 5;
	ERROR_MSG        = 6;
	JOIN_REQ         = 7;
	JOIN_ANS         = 8;
	LOGOUT_REQ       = 9;
	LOGOUT_ANS       = 10;
}

enum rating {
	bronze     = 0;
	silver     = 1;
	gold       = 2;
	platinum   = 3;
	diamond    = 4;
	master     = 5;
	challenger = 6;
}

message basic_info {
	required string id = 1;
}

message game_history {
	required int32 rating_score   = 1;
	required int32 total_games    = 2;
	required int32 win            = 3;
	required int32 lose           = 4;
}

message user_info {
	required game_history game_history_ = 1;
	required basic_info basic_info_     = 2;
}

message packet_join_ans {
	required bool success            = 1;
	optional game_history history    = 2;
	repeated basic_info friends_list = 3; 
}

message packet_join_req {
	required string token = 1;
	required string id    = 2;
}

message packet_logout_req {
	optional bool none = 1 [default = true];
}

message packet_logout_ans {
	optional bool none = 1 [default = true];
}

message packet_friends_req {
	enum req_type {
		ADD      = 1;
		DEL      = 2;
		SEARCH   = 3;
	}
	required req_type type          = 1;	
	required basic_info target_info = 2;
}

message packet_friends_ans {
	required user_info friends_info     = 1;
	required bool online                = 2;
}

message packet_play_rank_game_req {
	optional bool none = 1 [default = true];
}

message packet_play_rank_game_ans {
	required bool success = 1;
}

message packet_play_friends_game_rel {
	enum req_type {
		APPLY  = 0;
		ACCEPT = 1;
		DENY   = 2;
	}
	required req_type type   = 1;
	required string target_id  = 3;
}

message packet_matching_complete_ans {
	required string room_key            = 1;
	required user_info opponent_player  = 2;
}

message packet_error_message {
	required string error_string = 1;
}